<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >

        <TextView
            android:id="@+id/header1.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/header1.1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/handling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header1.1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/handling"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/header1.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/handling"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/header1.2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dB_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header1.2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dB_general"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/header1.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/examples"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/header1.3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header1.3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/device"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/header1.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/device"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/header1.4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header1.4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:textStyle="italic"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/examples"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dB_general"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/examples"
            android:src="@drawable/examples" />

    </RelativeLayout>

</ScrollView>